--- a/Kanna.xcodeproj/xcshareddata/xcschemes/Kanna.xcscheme
+++ b/Kanna.xcodeproj/xcshareddata/xcschemes/Kanna.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0810"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1EAFA0D71B6039D5001F3D84"
+               BlueprintIdentifier = "1E7ADC321DF4F3FC006E1815"
                BuildableName = "Kanna.framework"
-               BlueprintName = "Kanna_iOS"
-               ReferencedContainer = "container:Kanna.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1EAFA0E21B6039D5001F3D84"
-               BuildableName = "KannaTests.xctest"
-               BlueprintName = "KannaTests"
+               BlueprintName = "Kanna"
                ReferencedContainer = "container:Kanna.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,9 +32,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1EAFA0E21B6039D5001F3D84"
-               BuildableName = "KannaTests.xctest"
-               BlueprintName = "KannaTests"
+               BlueprintIdentifier = "1E7ADC3B1DF4F3FC006E1815"
+               BuildableName = "Tests.xctest"
+               BlueprintName = "Tests"
                ReferencedContainer = "container:Kanna.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -56,9 +42,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1EAFA0D71B6039D5001F3D84"
+            BlueprintIdentifier = "1E7ADC321DF4F3FC006E1815"
             BuildableName = "Kanna.framework"
-            BlueprintName = "Kanna_iOS"
+            BlueprintName = "Kanna"
             ReferencedContainer = "container:Kanna.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -66,7 +52,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -78,9 +64,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1EAFA0D71B6039D5001F3D84"
+            BlueprintIdentifier = "1E7ADC321DF4F3FC006E1815"
             BuildableName = "Kanna.framework"
-            BlueprintName = "Kanna_iOS"
+            BlueprintName = "Kanna"
             ReferencedContainer = "container:Kanna.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -96,9 +82,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1EAFA0D71B6039D5001F3D84"
+            BlueprintIdentifier = "1E7ADC321DF4F3FC006E1815"
             BuildableName = "Kanna.framework"
-            BlueprintName = "Kanna_iOS"
+            BlueprintName = "Kanna"
             ReferencedContainer = "container:Kanna.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -109,23 +95,5 @@
    <ArchiveAction
       buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
-      <PostActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "set -e&#10;&#10;DEVICE_BIN=&quot;${OBJROOT}/UninstalledProducts/${TARGET_NAME}.framework&quot;&#10;SIMULATOR_BIN=&quot;${SYMROOT}/../../../../Products/Debug-iphonesimulator/${TARGET_NAME}.framework&quot;&#10;&#10;ARCHIVE_PATH=&quot;${SRCROOT}/_Archive&quot;&#10;rm -rf &quot;${ARCHIVE_PATH}&quot;&#10;mkdir &quot;${ARCHIVE_PATH}&quot;&#10;&#10;if [ &quot;${CONFIGURATION}&quot; = &quot;Release&quot; ]; then&#10;&#10;if [ -d &quot;${DEVICE_BIN}&quot; ]; then&#10;DEVICE_PATH=&quot;${ARCHIVE_PATH}/Release&quot;&#10;mkdir &quot;${DEVICE_PATH}&quot;&#10;cp -r &quot;${DEVICE_BIN}&quot; &quot;${DEVICE_PATH}&quot;&#10;fi&#10;if [ -d &quot;${SIMULATOR_BIN}&quot; ]; then&#10;SIMULATOR_PATH=&quot;${ARCHIVE_PATH}/Debug&quot;&#10;mkdir &quot;${SIMULATOR_PATH}&quot;&#10;cp -r &quot;${DEVICE_BIN}&quot; &quot;${SIMULATOR_PATH}&quot;&#10;lipo -create &quot;${DEVICE_BIN}/${TARGET_NAME}&quot; &quot;${SIMULATOR_BIN}/${TARGET_NAME}&quot; -output &quot;${SIMULATOR_PATH}/${TARGET_NAME}.framework/${TARGET_NAME}&quot;&#10;&#10;fi&#10;fi&#10;exit 0;&#10;">
-               <EnvironmentBuildable>
-                  <BuildableReference
-                     BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "1EAFA0D71B6039D5001F3D84"
-                     BuildableName = "Kanna.framework"
-                     BlueprintName = "Kanna_iOS"
-                     ReferencedContainer = "container:Kanna.xcodeproj">
-                  </BuildableReference>
-               </EnvironmentBuildable>
-            </ActionContent>
-         </ExecutionAction>
-      </PostActions>
    </ArchiveAction>
 </Scheme>
