--- a/Configurations/Base.xcconfig
+++ b/Configurations/Base.xcconfig
@@ -33,10 +33,11 @@ VERSIONING_SYSTEM = apple-generic
 
 CODE_SIGNING_REQUIRED = NO
 CODE_SIGN_IDENTITY =
-MACOSX_DEPLOYMENT_TARGET = 10.9
-IPHONEOS_DEPLOYMENT_TARGET = 8.0
+MACOSX_DEPLOYMENT_TARGET = 10.13
+IPHONEOS_DEPLOYMENT_TARGET = 12.0
 WATCHOS_DEPLOYMENT_TARGET = 2.0
 TVOS_DEPLOYMENT_TARGET = 9.0
+XROS_DEPLOYMENT_TARGET = 1.0
 
 HEADER_SEARCH_PATHS = $(SDKROOT)/usr/include/libxml2
 SWIFT_INCLUDE_PATHS = $(SRCROOT)/Modules
