--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,23 +7,32 @@ on:
 
 jobs:
   mac:
-    runs-on: macos-14
+    runs-on: macos-15
     strategy:
       matrix:
-        xcode: [14.3.1, 15.2]
+        xcode: [15.4, 16.3]
       fail-fast: false
     name: Xcode ${{ matrix.xcode }}
     env:
       DEVELOPER_DIR: "/Applications/Xcode_${{ matrix.xcode }}.app"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      - name: Confirm Swift Version
+        run: swift --version
       - name: xcode build and test
         run: |
           set -o pipefail
-          xcodebuild build-for-testing test-without-building -scheme Kanna -configuration Release ENABLE_TESTABILITY=YES | xcpretty -c
-          xcodebuild build-for-testing test-without-building -scheme Kanna -configuration Release -sdk iphonesimulator -destination "name=iPhone 15" ENABLE_TESTABILITY=YES | xcpretty -c
-          xcodebuild build-for-testing test-without-building -scheme Kanna -configuration Release -sdk appletvsimulator -destination "name=Apple TV" ENABLE_TESTABILITY=YES | xcpretty -c
-          xcodebuild -scheme Kanna -configuration Release -sdk watchsimulator -destination "name=Apple Watch Series 8 (45mm)"
+          if [ "${{ matrix.xcode }}" = "15.4" ]; then
+            xcodebuild build-for-testing test-without-building -scheme Kanna -configuration Release SWIFT_VERSION=5.0 ENABLE_TESTABILITY=YES | xcpretty -c
+            xcodebuild build-for-testing test-without-building -scheme Kanna -configuration Release -sdk iphonesimulator -destination "name=iPhone 15" SWIFT_VERSION=5.0 ENABLE_TESTABILITY=YES | xcpretty -c
+            xcodebuild build-for-testing test-without-building -scheme Kanna -configuration Release -sdk appletvsimulator -destination "name=Apple TV" SWIFT_VERSION=5.0 ENABLE_TESTABILITY=YES | xcpretty -c
+            xcodebuild -scheme Kanna -configuration Release -sdk watchsimulator -destination "name=Apple Watch Series 9 (45mm)" SWIFT_VERSION=5.0 
+          else
+            xcodebuild build-for-testing test-without-building -scheme Kanna -configuration Release SWIFT_VERSION=6.0 ENABLE_TESTABILITY=YES | xcpretty -c
+            xcodebuild build-for-testing test-without-building -scheme Kanna -configuration Release -sdk iphonesimulator -destination "name=iPhone 16" SWIFT_VERSION=6.0 ENABLE_TESTABILITY=YES | xcpretty -c
+            xcodebuild build-for-testing test-without-building -scheme Kanna -configuration Release -sdk appletvsimulator -destination "name=Apple TV" SWIFT_VERSION=6.0 ENABLE_TESTABILITY=YES | xcpretty -c
+            xcodebuild -scheme Kanna -configuration Release -sdk watchsimulator -destination "name=Apple Watch Series 10 (46mm)" SWIFT_VERSION=6.0
+          fi
       - name: swiftpm build and test
         run: |
           swift build
