--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,15 @@ on:
 
 jobs:
   mac:
-    runs-on: macos-15
     strategy:
       matrix:
-        xcode: [15.4, 16.3]
+        include:
+          - os: macos-15
+            xcode: '16.3'
+          - os: macos-14
+            xcode: '15.4'
       fail-fast: false
+    runs-on: ${{ matrix.os }}
     name: Xcode ${{ matrix.xcode }}
     env:
       DEVELOPER_DIR: "/Applications/Xcode_${{ matrix.xcode }}.app"
